# retirement-modeling

./: .dockerignore  .envrc  .gitignore  ApplicationDetails.md  CLAUDE.md  CLI-README.md  COPYRIGHT  Completed.md  DEFINITIONS.md  DESIGN.md  Dockerfile  Dockerfile.api  Dockerfile.ui  FUTURE.md  LICENSE.txt  Makefile  README.md  STRATEGIES.md  TESTING.md  TODO.md  compose.yaml  input.json  model.py  pyproject.toml  tabbed-simulation-view.md
.github/workflows/: ci.yml  deploy.yml
docs/: BE-8-Chatbot-Integration.md  BE-9-Multi-User.md  Decisions.md  Deploy.md  UI-Issues.txt
docs/plans/: 2026-03-03-help-refactor-design.md  2026-03-03-help-refactor-plan.md  2026-03-03-per-account-growth-design.md  2026-03-03-per-account-growth-plan.md  2026-03-08-help-search-design.md  2026-03-08-help-search-plan.md  2026-03-10-previous-version-link-design.md  2026-03-10-previous-version-link.md  2026-03-12-ui-cleanup-bundle-design.md  2026-03-12-ui-cleanup-bundle.md  2026-03-13-balanced-sources-uses.md
openspec/: ANALYSIS.md  config.yaml
openspec/changes/add-income-streams/: tasks.md
openspec/changes/add-skeleton-theming/: design.md  proposal.md  tasks.md
openspec/changes/add-sveltekit-ui/: design.md  tasks.md
openspec/changes/ux-refactor-simulate-tab/: tasks.md
openspec/specs/app-shell-layout/: spec.md
openspec/specs/containerization/: spec.md
openspec/specs/demo-mode/: spec.md
openspec/specs/details-page/: spec.md
openspec/specs/e2e-test-suites/: spec.md
openspec/specs/e2e-testing/: spec.md
openspec/specs/first-use-flow/: spec.md
openspec/specs/guided-tour/: spec.md
openspec/specs/health-endpoint/: spec.md
openspec/specs/ui-shell/: spec.md
portfolios/: sample_portfolio.json
scripts/: set-gcloud-creds-for-deploy
src/retirement_model/: __init__.py  api.py  cli.py  constants.py  historical_returns.py  historical_tax_regimes.py  loader.py  models.py  monte_carlo.py  output.py  simulation.py  social_security.py  strategies.py  taxes.py  withdrawals.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_fe_be_boundary.py  test_historical_returns.py  test_historical_tax_regimes.py  test_income_streams.py  test_loader.py  test_models.py  test_monte_carlo.py  test_output.py  test_salary_retirement_gating.py  test_simulation.py  test_social_security.py  test_strategies.py  test_taxes.py  test_withdrawals.py
todo/: 000  001-fix-conversions.md  002-identified-issues.md  002-identified-issues.md.localchgs  003-deferred-ux.md  003-status-endpoint.md  100-refactor  100-withdrawal-plan.md  101-detail-pane-improvements.md  101-multiselect  102-present-value-improvements.md  105-cached-image.md  106-spending-chart-cashflow-formula.md  107-svelte5-runes-store-migration.md  108-ss-cola-rate.md  109-spending-volatility-display.md  200-additional-improvements.md  201-start-year-exploration.md  202-demo-randomize-all-fields.md  202-growth-rate-tax-drag-review.md  203-filing-status-tax-regime.md  203-withdrawal-plan-enhancements.md  300-fixes  301-help-text-why-not-what.md  refactor-settings.md
ui/: .prettierrc  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
ui/e2e/: compare.spec.ts  details.spec.ts  help.spec.ts  helpers.ts  navigation.spec.ts  portfolio-editor.spec.ts  setup.spec.ts  simulate.spec.ts  spending.spec.ts
ui/src/: app.css  app.d.ts  app.html  test-setup.ts
(+406 files in other folders)
